[package]
name = "lighter-mm-dryrun"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "native-tls"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
futures-util = "0.3"
ordered-float = { version = "5", features = ["serde"] }
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
